[package]
name = "graphql-drop-unused-definitions"
version = "0.1.0"
edition = "2021"
description = "prune unreachable GraphQL operation/fragment definitions for a chosen root operation"
license = "MIT"
repository = "https://github.com/hey-jj/graphql-drop-unused-definitions"
readme = "README.md"

[dependencies]
