[package]
name = "graphql-drop-unused-definitions"
version = "0.2.0"
edition = "2021"
description = "prune unreachable GraphQL operation/fragment definitions for a chosen root operation"
license = "MIT"
repository = "https://github.com/hey-jj/graphql-drop-unused-definitions"
readme = "README.md"
keywords = ["graphql", "query", "fragment", "ast", "prune"]
categories = ["parsing", "web-programming", "development-tools"]

[dependencies]
# Parses GraphQL executable documents and renders them back. Its Display output
# matches the formatting the tests assert: two-space indent, blank line between
# definitions, anonymous-operation shorthand.
graphql-parser = "0.4"

[dev-dependencies]
proptest = "1.11.0"
